Add Interpretation & Business Recommendation

--- a/notebooks/Statistical_testing.ipynb
+++ b/notebooks/Statistical_testing.ipynb
@@ -13,10 +13,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "97637844-a365-4e9d-b566-9e3a4b409487",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_5629/3163275714.py:7: DtypeWarning: Columns (18) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  df = pd.read_csv(\"../data/insurance.csv\")\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -29,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "cf3ca255-f57d-4921-959c-b96eb34e74c6",
    "metadata": {},
    "outputs": [],
@@ -169,58 +178,48 @@
   },
   {
    "cell_type": "markdown",
-   "id": "43c4192d-689a-4720-9afb-b1b89aedde80",
+   "id": "71bd2986-dcca-4175-8158-4de81d796555",
    "metadata": {},
    "source": [
-    "## Interpretation of Findings & Strategic Business Recommendations\n",
+    "## Interpretation & Business Recommendations\n",
     "\n",
-    "The statistical analysis conducted revealed strong evidence that risk and profitability in the insurance portfolio vary significantly by geography and demographic attributes. The findings below provide guidance for refining AlphaCare Insurance Solutions’ pricing and marketing strategies.\n",
+    "The statistical analysis conducted revealed strong evidence that risk and profitability in the insurance portfolio vary significantly by geography and demographic attributes. \n",
     "\n",
-    "---\n",
+    "#### 1. Geographic Risk Variation - Provinces\n",
     "\n",
-    "### 1. Geographic Risk Variation — Provinces\n",
+    "There is very strong statistical evidence (p = 0.0000) that claim frequency varies significantly across provinces. This geographic disparity suggests that regional characteristics are influencing insurance risk.\n",
     "\n",
-    "There is **very strong statistical evidence** (p = 0.0000) that **claim frequency varies significantly across provinces**. For example, Gauteng province exhibits a substantially higher claim rate compared to provinces such as the Western Cape. This geographic disparity suggests that regional characteristics — such as traffic density, urban infrastructure, or environmental conditions — are influencing insurance risk.\n",
+    "**Recommendation**: Introduce province-based premium differentiation**. Premiums in high-risk provinces like Gauteng should be increased to reflect higher claim probability, while competitive pricing can be offered in lower-risk provinces to attract safer customers.\n",
     "\n",
-    "**Recommendation**: Introduce **province-based premium differentiation**. Premiums in high-risk provinces like Gauteng should be increased to reflect higher claim probability, while competitive pricing can be offered in lower-risk provinces to attract safer customers.\n",
     "\n",
-    "---\n",
+    "#### 2. Localized Risk - Zip Code Segmentation\n",
     "\n",
-    "### 2. Localized Risk — Zip Code Segmentation\n",
+    "Zip code-level analysis also showed strong statistical significance (p = 0.0000), indicating that claim frequency differs sharply even within provinces. This fine-grained spatial variation reinforces the need for more localized underwriting practices.\n",
     "\n",
-    "Zip code-level analysis also showed **strong statistical significance** (p = 0.0000), indicating that **claim frequency differs sharply even within provinces**. This fine-grained spatial variation reinforces the need for more localized underwriting practices.\n",
+    "**Recommendation**: Leverage zip-code segmentation in pricing models. Use this to fine-tune premiums within provinces, identify high-risk zones, and create localized marketing strategies targeting low-risk areas with competitive offers.\n",
     "\n",
-    "**Recommendation**: Leverage **zip-code segmentation** in pricing models. Use this to fine-tune premiums within provinces, identify high-risk zones, and create **localized marketing strategies** targeting low-risk areas with competitive offers.\n",
     "\n",
-    "---\n",
+    "#### 3. Profitability Differences Across Zip Codes\n",
     "\n",
-    "### 3. Profitability Differences Across Zip Codes\n",
+    "The analysis revealed a statistically significant difference in profit margins across zip codes (p = 0.0469). This suggests that current pricing may not fully account for regional differences in loss ratios, potentially leading to underpricing in some locations.\n",
     "\n",
-    "The analysis revealed a statistically significant difference in **profit margins across zip codes** (p = 0.0469). This suggests that AlphaCare’s current pricing may not fully account for regional differences in loss ratios, potentially leading to underpricing in some locations.\n",
+    "**Recommendation**: Implement margin monitoring dashboards at the zip code level and adjust pricing models accordingly. Focus on increasing margins in consistently low-performing areas and reallocating marketing spend to more profitable segments.\n",
     "\n",
-    "**Recommendation**: Implement **margin monitoring dashboards** at the zip code level and adjust pricing models accordingly. Focus on increasing margins in consistently low-performing areas and reallocating marketing spend to more profitable segments.\n",
     "\n",
-    "---\n",
+    "#### 4. Gender-Based Risk Variation\n",
     "\n",
-    "### 4. Gender-Based Risk Variation\n",
+    "A highly significant difference in claim frequency was observed between genders (p = 0.0001), with male policyholders being more likely to file a claim than females. While pricing based on gender may be restricted by regulations, this insight still offers strategic value.\n",
     "\n",
-    "A highly significant difference in claim frequency was observed between genders (p = 0.0001), with **male policyholders being more likely to file a claim** than females. While pricing based on gender may be restricted by regulations, this insight still offers strategic value.\n",
-    "\n",
-    "**Recommendation**: Consider **gender-informed marketing** strategies or reward programs. Target lower-risk demographics (e.g., female drivers) with discounts or value-added services to improve the overall risk profile of the portfolio, while remaining compliant with legal frameworks.\n",
-    "\n",
-    "---\n",
-    "\n",
-    "### 📊 Strategic Summary\n",
-    "\n",
-    "This analysis confirms that both **location and demographic features** are powerful predictors of risk and profitability in AlphaCare’s customer base. By incorporating these findings into its pricing strategy, AlphaCare can:\n",
-    "\n",
-    "- Improve profitability through **location-based risk pricing**\n",
-    "- Reduce claim losses by **targeting low-risk segments**\n",
-    "- Develop more **granular, data-informed underwriting rules**\n",
-    "- Design **customer acquisition strategies** that align with risk profiles\n",
-    "\n",
-    "These insights lay the groundwork for the next phase: building predictive models for dynamic, risk-adjusted premium optimization.\n"
+    "**Recommendation**: Consider gender-informed marketing strategies or reward programs. Target lower-risk demographics with discounts or value-added services to improve the overall risk profile of the portfolio, while remaining compliant with legal frameworks.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87ebad60-5aee-4f2c-b6f8-0a6a9c8d33f0",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
